--- a/example-services/user-service/build.gradle
+++ b/example-services/user-service/build.gradle
@@ -18,7 +18,12 @@ repositories {
   mavenCentral()
 }
 
+ext {
+  set('springCloudVersion', "2020.0.2")
+}
+
 dependencies {
+  implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-web'
 
@@ -32,6 +37,12 @@ dependencies {
   annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+  imports {
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+  }
 }
 
 test {
